--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -4,20 +4,15 @@ body {
 
 .para,
 .small-para {
-  color: hsl(0, 0%, 0%);
   font-weight: 800;
-}
-
-.small-para {
-  font-size: 14px;
-  font-weight: 800;
-}
-
-.para {
   font-size: 22px;
 }
 
-.confirm {
+.small-para.para {
+  font-size: 14px;
+}
+
+.button.confirm {
   background: green;
   color: white;
   font-weight: bold;
@@ -29,7 +24,7 @@ body {
   font-size: 20px;
 }
 
-.child {
+.child.text {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
