Modify classes in order to fix the Cascade issue

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,17 +2,25 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+
 .para,
 .small-para {
+  color: hsl(0, 0%, 0%);
   font-weight: 800;
-  font-size: 22px;
 }
 
-.small-para.para {
+.para {
+  font-size: 22px;
+  font-weight: 800;
+}
+
+.small-para{
+
   font-size: 14px;
 }
 
-.button.confirm {
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
@@ -24,7 +32,7 @@ body {
   font-size: 20px;
 }
 
-.child.text {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
